--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1736,107 +1736,107 @@ stories:
   domain: http://www.dispatch.com/
   link: https://www.oneidadispatch.com/news/national/hong-kong-clashes-continue-in-shopping-centers-streets/image_b4be2fb5-5671-5479-90f6-97633e38cf89.html
 images:
-- name: legal-statue-legalstatue-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-storm.jpg
-- name: stories-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-copper-circuit.png
-- name: soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-- name: mistywoods-babyfoot-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-colorful-blocks.jpg
-- name: oldhotel-oldhotel-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
-- name: containership-containership-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
-- name: braceros-domingo-ulloa-london-underground-covent-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-london-underground-covent-garden.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
-- name: store-on-corner-oldcabin-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-neo-instinct.jpg
-- name: old-house-oldhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-matrix.jpg
-- name: oldhouse-granaryfield-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-aqua.jpg
-- name: fence-mexico-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-monet-one.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
-- name: bf-skinner-oxoford-circus-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-oxoford-circus-station.jpg
-- name: status-berlin-status-berlin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-soul.jpg
-- name: stalin-time-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-public-market_36725946605_o.jpg
-- name: power-lines-power-lines-empty-space-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-constitution.jpg
-- name: bf-skinner-steam-engine-iceland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-steam-engine-iceland.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-- name: gypsymosaic-gypsy-eyes-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crunch-paper.jpg
-- name: legal-statue-legalstatue-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-three.jpg
-- name: la-muse-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-castle-window_35928999923_o.jpg
-- name: catacombs-catacombs-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crunch-paper.jpg
-- name: oldcabin-oldcabin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
-- name: downtown-trucksilo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-soul.jpg
-- name: old-gas-pumps-oldgaspumps-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gred-mash.jpg
-- name: adam-smith-adam-smith-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-green-zuma.jpg
-- name: stories-new-art-museum-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-art-museum-light-dali.jpg
-- name: store-on-corner-store-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
-- name: mediterranean-mediterranean-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crabapple.jpg
-- name: bf-skinner-colonial-solider-pointing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-colonial-solider-pointing.jpg
-- name: castle-wall-DSC-0067-blue-circuit-4.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-4.JPG
-- name: locked-up-steam-lock-up-steam-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colorful-blocks.jpg
-- name: nazi-invasion-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-piano-paris-hospital.jpg
-- name: hollywood-building-hollywood-building-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-cinnamon-rolls.jpg
-- name: sand-hand-sand-hand-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-really-hot.jpg
-- name: gypsymosaic-gypsy-eyes-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-oily-mcoilface.jpg
-- name: art-museum-art-museum-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-deep-connections.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+- name: supreme-court-supremecourt-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-wols.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
+- name: copper-circuit-down-the-line-harlem.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-down-the-line-harlem.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-smoking-cigarette.jpg
+- name: store-on-corner-store-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-green-zuma.jpg
+- name: flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+- name: trucksilo-trucksilo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
+- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dali-three.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smooth-ride.jpg
+- name: dragon-desert-desert-dragon-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-purple-storm.jpg
+- name: school-clouds-church-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-smooth-ride.jpg
+- name: oldroad-old-road-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
+- name: gypsy-wagon-gypsywagon-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-colored-circuits.jpg
+- name: old-barn-old-barn-1500-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-really-hot.jpg
+- name: gypsymosaic-gypsy-eyes-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alien-goggles.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth.png
+- name: san-francisco-street-view-san-francisco-street-view-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-plentiful.jpg
+- name: aws-s3-stories-ellisisland-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-ellisisland-blue-circuit.jpg
+- name: aws-s3-stories-new-80-140-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-140-800-500-0-max-0--5--5.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dry-skin.jpg
+- name: nazi-invasion-glass-ball-downtown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-glass-ball-downtown.jpg
+- name: dc-statue-dcstatue-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-clean-view.jpg
+- name: bf-skinner-palace-water-fountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-palace-water-fountain.jpg
+- name: oldcabin-oldcabin-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-asteroids.jpg
+- name: braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+- name: copper-circuit-waterfall-southern-oregon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-waterfall-southern-oregon.jpg
 - name: eduardo-eduardo-cinnamon-rolls.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-cinnamon-rolls.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-colorful-dream.jpg
-- name: subway-subway-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
-- name: machine-road-machine-road-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-attack-planes.jpg
-- name: machine-road-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-missle.jpg
-- name: old-door-lock-old-door-lock-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-free-woman.jpg
-- name: server-cloud-server-racks-door-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crabapple.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-ww2-color.jpg
-- name: aws-s3-deserthills-deserthills-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-1200.jpg
-- name: rockingchair-rockingchair-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crabapple.jpg
-- name: border-crossing-bordercrossing-gan-vogh.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gan-vogh.png
-- name: los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-- name: old-door-lock-old-door-lock-2-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-diego-rivera1.jpg
+- name: fence-fence-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
+- name: christianity-christianity-under-construction-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gred-mash.jpg
+- name: berlinwall-DSC-0084-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-alien-goggles.jpg
+- name: cargo-ship-cargo-ship-on-sea-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
+- name: border-fence-border-fence-on-hill-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-marcel-duchamp.jpg
+- name: long-factory-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-uncle-sam.jpg
+- name: downtown-trucksilo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-bright-sand.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
+- name: old-door-lock-old-door-lock-2-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dali-three.jpg
+- name: gypsymosaic-gypsy-eyes-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-constitution.jpg
+- name: trucksilo-trucksilo-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-dali.jpg
+- name: aws-s3-desertrun-desertrun-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-1200.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
+- name: bf-skinner-white-house-close-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-close-up.jpg
+- name: power-lines-power-lines-empty-space-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-pablo-blue.jpg
+- name: server-cloud-server-racks-door-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-gan-vogh.jpg
+- name: aws-s3-methuselah-methuselah-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still.jpg
+- name: old-granary-field-granaryfield-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-cinnamon-rolls.jpg
+- name: trucksilo-trucksilo-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-plentiful.jpg
 ---
 Cher Proved She Has Nothing To Prove On Thursday Night In Dallas.&nbsp;Hounds Tame Cedar Shoals To Advance To Quarterfinals.&nbsp;Kolby Glenn And Jack Ruch.&nbsp;Salida Community Awards Open For Nominations.&nbsp;Geologist To Share Research On Plum Island's Formation, Erosion.&nbsp;Taking Care Of Your Office Appliances In The Right Way!.&nbsp;Police Release Identity Of Man Killed In Hampton Roads Center Parkway Crash.&nbsp;Lady Devils Beat Cedar, Hart.&nbsp;
